--- a/index.html
+++ b/index.html
@@ -22,14 +22,9 @@
 
   <div class="wrap">
     <a href="harta.html">Harta</a>
-    <a href="harta2.html">Harta</a>
-    <select class="selectH" id="selectH" name="trasee">
-      <option value="trail5">Traseul1</option>
-      <option value="trail10">Traseul2</option>
-    </select>
-    <div class="hartile">
+    <!-- <div class="hartile">
       <iframe class="hartile" src="harta.html"></iframe>
-    </div>
+    </div> -->
   </div>
 
   <script type="text/javascript" src="main.js"></script>
