--- a/harta.html
+++ b/harta.html
@@ -73,11 +73,11 @@
       <b>Waypoints:</b> <br>
       <b>End:</b><br>
       <input type="submit" id="submit">
-      <select class="selectH" id="orase" name="orase">
+      <select class="selectH" id="cities" name="orase">
         <option value="trail5">Traseul1</option>
         <option value="trail10">Traseul2</option>
       </select>
-      <select class="selectH" id="selectH" name="trasee" placeholder="Select Trail">
+      <select class="selectH" id="trackOptions" name="trasee" placeholder="Select Trail">
         <option value="trail5">Traseul1</option>
         <option value="trail10">Traseul2</option>
       </select>
@@ -87,10 +87,8 @@
     <p class="getDate"></p>
     <div id="directions-panel"></div>
   </div>
-  <script>
-  </script>
-  <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script src="js\jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPKO5P4fSH9AQPSzvXGmDMECNIPWxHv_4&callback=initMap">
   </script>
 </body>
