--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/vadim_619x660.jpg" alt="">
             <h4>Vadim Levitchi</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
@@ -406,7 +406,7 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/alina_621x660.jpg" alt="">
             <h4>Alina Ivan</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
@@ -430,7 +430,7 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/sebi_619x660.jpg" alt="">
             <h4>Sebastian Radu</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
@@ -454,7 +454,7 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/tania_619x660.jpg" alt="">
             <h4>Tania Ungureanu</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
@@ -810,10 +810,9 @@
       </div>
     </div> -->
 
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
   <!-- Plugin JavaScript -->
