--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To Our Running App!</div>
         <div class="quote intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Get Started</a></br>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#maps">Get Started</a></br>
 
 
 
