test date-picker #1

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="h4 text-muted text-justify text-sm-center d-flex">Find out when it's a good day to run!</p>
                   </div>
                   <div class="col-xs-12 col-centered">
-                    <input id="datePicker" class="input-group input-group-lg rounded mb-2" type="date" name="" value="">
+                    <input data-provide="datepicker" id="datePicker" class="input-group input-group-lg rounded mb-2" type="date" name="" value="">
                     <button id="datebtn" class="btn btn-secondary btn-block d-flex justify-content-center text-wrap" type="button" name="button"><span>Weather Forecast</span></button>
                     <p class="getDate h5 text-center mt-2"></p>
                   </div>
