--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- flipcountdown jquery plugin-->
   <link rel="stylesheet" type="text/css" href="flipcountdown-master/jquery.flipcountdown.css" />
 
+  <!-- Bootstrap datepicker-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
+
   <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -68,9 +71,9 @@
         <div class="intro-lead-in">Welcome To Our Running App!</div>
         <div class="quote intro-heading text-uppercase">It's Nice To Meet You</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#maps">Get Started</a></br>
-        <div class="mb-3" id="countdown">
+        <div class="mb-3 flipcountdown" id="countdown">
           <a href="http://bucharest-marathon.com/en/" target="_blank">
-            <p class="font-weight-bold">SIGN FOR: BUCHAREST MARATHON</p>
+            <p class="font-weight-bold">SIGN UP FOR: BUCHAREST MARATHON</p>
           </a>
           <div class ="table-responsive">
             <table class="table table-sm p-0 m-0">
@@ -111,13 +114,20 @@
                     <p class="h4 text-muted text-justify text-sm-center d-flex">Find out when it's a good day to run!</p>
                   </div>
                   <div class="col-xs-12 col-centered">
-                    <input data-provide="datepicker" id="datePicker" class="input-group input-group-lg rounded mb-2" type="date" name="" value="">
+                    <div class="form-group">
+                      <div class="d-flex flex-row justify-content-center" id="dateTimePicker" data-target-input="nearest">
+                        <input name="datePicker" type="text" class="input-group input-group-lg date datetimepicker-input" data-target="#dateTimePicker"/>
+                        <div class="input-group-append" data-target="#dateTimePicker" data-toggle="datetimepicker">
+                          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                        </div>
+                      </div>
+                    </div>
                     <button id="datebtn" class="btn btn-secondary btn-block d-flex justify-content-center text-wrap" type="button" name="button"><span>Weather Forecast</span></button>
                     <p class="getDate h5 text-center mt-2"></p>
                   </div>
                 </div>
-                <div id="directions"></div>
               </div>
+              <div id="directions"></div>
             </div>
           </div>
         </div>
@@ -816,6 +826,11 @@
   <!-- Plugin flipcountdown -->
   <!-- <script type="text/javascript" src="flipcountdown-master/jquery.min.js"></script> -->
   <script type="text/javascript" src="flipcountdown-master/jquery.flipcountdown.js"></script>
+
+  <!-- Plugin datepicker -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+
 
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
