--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="subject" type="text" placeholder="Your Subject *" required="required" data-validation-required-message="Please enter your email subject.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
@@ -833,8 +833,8 @@
 
 
   <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <!-- <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script> -->
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.js"></script>
