--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           <a href="http://bucharest-marathon.com/en/" target="_blank">
             <p class="font-weight-bold">SIGN UP FOR: BUCHAREST MARATHON</p>
           </a>
-          <div class ="table-responsive">
+          <div class="table-responsive">
             <table class="table table-sm p-0 m-0">
-          		<tr scope="row">
-          			<td class="text-right m-0 p-0" scope="col">Days</td>
-          			<td class="text-right m-0 p-0" scope="col">Hours</td>
-          			<td class="text-right m-0 p-0" scope="col">Minutes</td>
-          			<td class="text-right m-0 p-0" scope="col">Seconds</td>
-          		</tr>
+              <tr scope="row">
+                <td class="text-right m-0 p-0" scope="col">Days</td>
+                <td class="text-right m-0 p-0" scope="col">Hours</td>
+                <td class="text-right m-0 p-0" scope="col">Minutes</td>
+                <td class="text-right m-0 p-0" scope="col">Seconds</td>
+              </tr>
             </table>
           </div>
           <div id="retroclockbox1"></div>
@@ -116,7 +116,7 @@
                   <div class="col-xs-12 col-centered">
                     <div class="form-group">
                       <div class="d-flex flex-row justify-content-center" id="dateTimePicker" data-target-input="nearest">
-                        <input name="datePicker" type="text" class="input-group input-group-lg date datetimepicker-input" data-target="#dateTimePicker"/>
+                        <input name="datePicker" type="text" class="input-group input-group-lg date datetimepicker-input" data-target="#dateTimePicker" />
                         <div class="input-group-append" data-target="#dateTimePicker" data-toggle="datetimepicker">
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
@@ -815,9 +815,9 @@
       </div>
     </div> -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
   <!-- Plugin JavaScript -->
@@ -833,8 +833,8 @@
 
 
   <!-- Contact form JavaScript -->
-  <!-- <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script> -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.js"></script>
