--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="shortcut icon" href="man_running2_4wy_icon.ico" type="image/x-icon">
 
   <title>Running Application</title>
 
@@ -517,6 +518,7 @@
         </div>
       </div>
     </section> -->
+
 
   <!-- Contact -->
   <section id="contact">
