--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/alina_621x660.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/alina_621x660-Copy.JPG" alt="">
             <h4>Alina Ivan</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
