--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
 
   <!-- Music Grid -->
   <section class="" id="music">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Music</h2>
-            <h3 class="section-subheading text-muted">Listen to one of our playlists while you run.</h3>
-            <button class="btn btn-secondary btn-lg btn-block mb-2" id="login">Login to Spotify</button>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Music</h2>
+          <h3 class="section-subheading text-muted">Listen to one of our playlists while you run.</h3>
+          <button class="btn btn-secondary btn-lg btn-block mb-2" id="login">Login to Spotify</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div id="spotify" class="embed-responsive embed-responsive-21by9">
+            <iframe id="resultIframe" class="embed-responsive-item" src="https://open.spotify.com/embed?uri=spotify:user:public:playlist:37i9dQZF1DX0wiundViT27" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-sm-12">
-            <div id="spotify" class="embed-responsive embed-responsive-21by9">
-              <iframe id="resultIframe" class="embed-responsive-item" src="https://open.spotify.com/embed?uri=spotify:user:public:playlist:37i9dQZF1DX0wiundViT27" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-          </div>
 
         <div class="card-body">
           <h4>Explore the possibilities</h4>
@@ -225,7 +225,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Playlist</span>
             </div>
-            <input id="query" class="form-control" type="text" placeholder="Search..." value="running"/>
+            <input id="query" class="form-control" type="text" placeholder="Search..." value="running" />
             <div class="input-group-append">
               <button id="searchButton" class="btn btn-secondary" type="button">Search</button>
             </div>
@@ -747,6 +747,7 @@
   <!-- Plugin Spotify -->
   <script type="text/javascript" src="js/spotify-web-api.js"></script>
 
+  <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
