--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To Our Running App!</div>
-        <div class="quote intro-heading text-uppercase">It's Nice To Meet You</div>
+        <div class="quote onDisplay intro-heading text-uppercase">It's Nice To Meet You</div>
         <a class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger" href="#maps">Get Started</a></br>
         <div class="mb-3 flipcountdown" id="countdown">
           <a href="http://bucharest-marathon.com/en/" target="_blank">
@@ -376,7 +376,7 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/sebi_619x660.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/sebi_615x659.jpg" alt="">
             <h4>Sebastian Radu</h4>
             <p class="text-muted">Front-End Web Developer</p>
             <ul class="list-inline social-buttons">
