--- a/index.html
+++ b/index.html
@@ -750,6 +750,8 @@
   <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
 
+  <!-- Cookies -->
+  <script src="js/jquery.cookie.js"></script>
   <!-- Custom scripts for this template -->
   <script src="js/template.js"></script>
   <script src="js/main.js"></script>
