--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <link rel="shortcut icon" href="man_running2_4wy_icon.ico" type="image/x-icon">
   <title>Running Application</title>
 
   <!-- Bootstrap core CSS -->
@@ -33,7 +33,7 @@
 
 <body id="page-top">
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"> VAST Running App</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +43,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
+            <a class="nav-link js-scroll-trigger" href="#routes">Routes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#routes">Routes</a>
+            <a class="nav-link js-scroll-trigger" href="#mapSection">Maps</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#music">Music</a>
@@ -67,8 +67,8 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to our Running App!</div>
-        <div class="quote onDisplay intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger" href="#maps">Get Started</a></br>
+        <div class="quote onDisplay intro-heading text-uppercase">It's Nice</br> To Meet You</div>
+        <a class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger bg-danger" href="#routes">Get Started</a></br>
         <div class="mb-3 flipcountdown" id="countdown">
           <a href="http://bucharest-marathon.com/en/" target="_blank">
             <p class="font-weight-bold">SIGN UP FOR: BUCHAREST MARATHON</p>
@@ -90,24 +90,87 @@
   </header>
 
 
-  <!-- Maps -->
-  <section id="maps">
+  <!-- Routes -->
+  <section id="routes">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Maps</h2>
-          <h3 class="section-subheading text-muted mb-0">Choose where you want to run!</h3>
+          <h2 class="section-heading text-uppercase">Routes</h2>
+          <h3 class="section-subheading text-muted mb-2">Choose where you want to run!</h3>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <label class="input-group-text bg-secondary text-white" for="cities">Running areas</label>
+              <label class="input-group-text text-dark" for="cities">Running areas</label>
             </div>
             <select id="cities" class="custom-select" type="text" name="cities" value="" placeholder="Choose a city"></select>
           </div>
         </div>
       </div>
 
+      <div class="row mb-4 mt-4">
+        <div class="col-lg-12 text-center">
+
+          <h3 class="section-subheading text-muted">Whether you are a newbie runner or an experienced one, you can find below some suggested running tracks to help you with your training</h3>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-md-4 mt-3">
+          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">
+              <img class="flatTrack mx-auto rounded-circle tracks grayscaleImage" src="img/trail/flatTrack.jpg" alt="flat trail">
+            </button>
+          <h4 class="service-heading">Flat</h4>
+          <div class="collapse multi-collapse" id="multiCollapseExample1">
+            <p class="text-muted">Road running - ideal for beginners and for those who need constant training</p>
+            <div>
+              <select class="selectH custom-select js-scroll-trigger" id="flatTrackOptions" name="trasee" placeholder="Select Trail">
+                  <option class="" value="trail5">Traseul1></option>
+                  <option class="" value="trail10">Traseul2</option>
+                </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-3">
+          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
+              <img class="trailTrack mx-auto rounded-circle grayscaleImage" src="img/trail/trailTrack2.jpg" alt="trail track">
+            </button>
+          <h4 class="service-heading">Trail</h4>
+          <div class="collapse multi-collapse" id="multiCollapseExample2">
+            <p class="text-muted">Mountain running - ideal for the mountain junkies who like to feel the adrenaline</p>
+            <div>
+              <select class="custom-select js-scroll-trigger" id="trailTrackOption" name="trasee" placeholder="Select Trail">
+                  <option class="" value="trail5">Traseul1></option>
+                  <option class="" value="trail10">Traseul2</option>
+                </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-3">
+          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">
+              <img class="combinedTrack mx-auto rounded-circle grayscaleImage" src="img/trail/combinedTrack.jpg" alt="combined track">
+            </button>
+          <h4 class="service-heading">Combined</h4>
+          <div class="collapse multi-collapse" id="multiCollapseExample3">
+            <p class="text-muted">Road and mountain running - ideal for those who want to combine the running styles</p>
+            <div>
+              <select class="selectH custom-select js-scroll-trigger" id="combinedTrackOptions" name="trasee" placeholder="Select Trail">
+                  <option class="" value="trail5">Traseul1></option>
+                  <option class="" value="trail10">Traseul2</option>
+                </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+<!-- Maps -->
+<section class="routesSection bg-light" id="routes">
+  <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
+          <h2 class="section-heading text-uppercase mt-5 mb-5" id="mapSection">Maps</h2>
           <div id="directionsPanel" class="bg-light">
             <div class="border" id="map"></div>
             <div class="" id="right-panel">
@@ -131,67 +194,6 @@
                 </div>
               </div>
               <div id="directions"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="bg-light routesSection" id="routes">
-    <div class="container">
-      <div class="row mb-4 mt-4">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase mb-5">Routes</h2>
-          <h3 class="section-subheading text-muted">Whether you are a newbie runner or an experienced one, you can find below some suggested running tracks to help you with your training</h3>
-        </div>
-      </div>
-
-      <div class="row text-center">
-        <div class="col-md-4 mt-3">
-          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">
-              <img class="flatTrack mx-auto rounded-circle" src="img/trail/flatTrack.jpg" alt="flat trail">
-            </button>
-          <h4 class="service-heading">Flat</h4>
-          <div class="collapse multi-collapse" id="multiCollapseExample1">
-            <p class="text-muted">Road running - ideal for beginners and for those who need constant training</p>
-            <div>
-              <select class="selectH custom-select js-scroll-trigger" id="flatTrackOptions" name="trasee" placeholder="Select Trail">
-                  <option class="" value="trail5">Traseul1></option>
-                  <option class="" value="trail10">Traseul2</option>
-                </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-3">
-          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
-              <img class="trailTrack mx-auto rounded-circle" src="img/trail/trailTrack2.jpg" alt="trail track">
-            </button>
-          <h4 class="service-heading">Trail</h4>
-          <div class="collapse multi-collapse" id="multiCollapseExample2">
-            <p class="text-muted">Mountain running - ideal for the mountain junkies who like to feel the adrenaline</p>
-            <div>
-              <select class="custom-select js-scroll-trigger" id="trailTrackOption" name="trasee" placeholder="Select Trail">
-                  <option class="" value="trail5">Traseul1></option>
-                  <option class="" value="trail10">Traseul2</option>
-                </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-3">
-          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">
-              <img class="combinedTrack mx-auto rounded-circle" src="img/trail/combinedTrack.jpg" alt="combined track">
-            </button>
-          <h4 class="service-heading">Combined</h4>
-          <div class="collapse multi-collapse" id="multiCollapseExample3">
-            <p class="text-muted">Road and mountain running - ideal for those who want to combine the running styles</p>
-            <div>
-              <select class="selectH custom-select js-scroll-trigger" id="combinedTrackOptions" name="trasee" placeholder="Select Trail">
-                  <option class="" value="trail5">Traseul1></option>
-                  <option class="" value="trail10">Traseul2</option>
-                </select>
             </div>
           </div>
         </div>
@@ -230,7 +232,7 @@
               <button id="searchButton" class="btn btn-secondary" type="button">Search</button>
             </div>
           </div>
-          <ul id="searchResults" class="list-group list-group-flush"></ul>
+          <ul id="searchResults" class="list-group list-group-flush spotifyItems"></ul>
         </div>
       </div>
     </div>
@@ -387,7 +389,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-secondary btn-xl text-uppercase mt-3 mb-3" type="submit">Send Message</button>
+                <button id="sendMessageButton" class="btn btn-secondary btn-xl text-uppercase bg-danger mt-3 mb-3" type="submit">Send Message</button>
               </div>
             </div>
           </form>
